<resources>
    <string name="app_name">UDiploma</string>
    <string name="title_activity_navigation">Navigation</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">UDiploma</string>
    <string name="nav_header_subtitle">Diploma In Engineering</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Result</string>
    <string name="menu_slideshow">BookList</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>

    <string name="option1">রেজাল্ট</string>
    <string name="option2">ভর্তি তথ্য</string>
    <string name="option3">প্রবিধান</string>
    <string name="option4">একাডেমিক কেলেন্ডার</string>
    <string name="option5">ইনস্টিটিউট</string>
    <string name="option6">বোর্ড</string>

    <string name="option7">Book List</string>
    <string name="option8">চাকুরী খুজুন</string>
    <string name="option9">CGPA</string>
    <string name="option10">একাডেমিক কেলেন্ডার</string>
    <string name="option11">ইনস্টিটিউট</string>
    <string name="option12">বোর্ড</string>

    <string-array name="BarishalDistrict">
        <item>Barisal Polytechnic Institute</item>
        <item>Bhola Polytechnic Institute</item>
        <item>Patuakhali Polytechnic Institute</item>
        <item>Barguna Polytechnic Institute</item>
    </string-array>
    <string-array name="BarishalDistrict_subTitle">
        <item>Barisal Polytechnic Institute</item>
        <item>Bhola Polytechnic Institute</item>
        <item>Patuakhali Polytechnic Institute</item>
        <item>Barguna Polytechnic Institute</item>
    </string-array>


    <string-array name="dhakaDistrict">
        <item>Dhaka Polytechnic InstituteDhaka</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Faridpur Polytechnic Institute</item>
        <item>Tangail Polytechnic Institute</item>
        <item>Graphic Arts Institute</item>
        <item>Bangladesh Institute of Glass and Ceramics</item>
        <item>Narsingdi Polytechnic Institute</item>
        <item>Shariatpur Polytechnic Institute</item>
        <item>Gopalganj Polytechnic Institute</item>
        <item>Munshiganj Polytechnic Institute</item>
        <item>Kishoreganj Polytechnic Institute</item>
    </string-array>
    <string-array name="dhakaDistrict_subTitle">
        <item>Dhaka Polytechnic InstituteDhaka</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Faridpur Polytechnic Institute</item>
        <item>Tangail Polytechnic Institute</item>
        <item>Graphic Arts Institute</item>
        <item>Bangladesh Institute of Glass and Ceramics</item>
        <item>Narsingdi Polytechnic Institute</item>
        <item>Shariatpur Polytechnic Institute</item>
        <item>Gopalganj Polytechnic Institute</item>
        <item>Munshiganj Polytechnic Institute</item>
        <item>Kishoreganj Polytechnic Institute</item>
    </string-array>

    <string-array name="ChittagongDistrict">
        <item>Chittagong Polytechnic Institute</item>
        <item>Chittagong Mohila Polytechnic Institute</item>
        <item>Comilla Polytechnic Institute</item>
        <item>Feni Polytechnic Institute</item>
        <item>Bangladesh Sweden Polytechnic Institute</item>
        <item>Bangladesh Survey Institute</item>
        <item>Feni Computer Institute</item>
        <item>Chandpur Polytechnic Institute</item>
        <item>Brahmanbaria Polytechnic Institute</item>
        <item>Cox"'"s Bazar Polytechnic Institute</item>
        <item>Lakshmipur Polytechnic Institute</item>
    </string-array>


    <string-array name="ChittagongDistrict_subTitle">
        <item>Khulna Polytechnic InstituteKhulna</item>
        <item>Jessore Polytechnic Institute</item>
        <item>Kushtia Polytechnic Institute</item>
        <item>Satkhira Polytechnic Institute</item>
        <item>Jhenaidah Polytechnic Institute</item>
        <item>Magura Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
    </string-array>


    <string-array name="KhulnaDistrict">
        <item>Khulna Polytechnic InstituteKhulna </item>
        <item>Jessore Polytechnic Institute</item>
        <item>Kushtia Polytechnic Institute</item>
        <item>Satkhira Polytechnic Institute</item>
        <item>Jhenaidah Polytechnic Institute</item>
        <item>Magura Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
    </string-array>
    <string-array name="KhulnaDistrict_subTitle">
        <item>Khulna Polytechnic InstituteKhulna </item>
        <item>Jessore Polytechnic Institute</item>
        <item>Kushtia Polytechnic Institute</item>
        <item>Satkhira Polytechnic Institute</item>
        <item>Jhenaidah Polytechnic Institute</item>
        <item>Magura Polytechnic Institute</item>
        <item>Mohila Polytechnic Institute</item>
    </string-array>

    <string-array name="MymonshinghDistrict">
        <item>Mymensingh Polytechnic Institute</item>
        <item>Sherpur Polytechnic Institute</item>
    </string-array>
    <string-array name="MymonshinghDistrict_subTitle">
        <item>Mymensingh Polytechnic Institute</item>
        <item>Sherpur Polytechnic Institute</item>
    </string-array>

    <string-array name="RajshahiDistrict">
        <item>Rajshahi Polytechnic Institute</item>
        <item>Rajshahi Mohila Polytechinic Institute</item>
        <item>Bogra Polytechnic Institute</item>
        <item>Pabna Polytechnic Institute</item>
        <item>Nogaon Polytechnic Institute</item>
        <item>Sirajgonj Polytechnic Institute</item>
        <item>Chapainawabgonj Polytechnic Institute</item>
    </string-array>
    <string-array name="RajshahiDistrict_subTitle">
        <item>Rajshahi Polytechnic Institute</item>
        <item>Rajshahi Mohila Polytechinic Institute</item>
        <item>Bogra Polytechnic Institute</item>
        <item>Pabna Polytechnic Institute</item>
        <item>Nogaon Polytechnic Institute</item>
        <item>Sirajgonj Polytechnic Institute</item>
        <item>Chapainawabgonj Polytechnic Institute</item>
    </string-array>

    <string-array name="RangpurDistrict">
        <item>Rangpur Polytechnic Institute</item>
        <item>Dinajpur Polytechnique Institute</item>
        <item>Kurigram Polytechnic Institute</item>
        <item>Thakurgaon Polytechnic Institute</item>
    </string-array>
    <string-array name="RangpurDistrict_subTitle">
        <item>Rangpur Polytechnic Institute</item>
        <item>Dinajpur Polytechnique Institute</item>
        <item>Kurigram Polytechnic Institute</item>
        <item>Thakurgaon Polytechnic Institute</item>
    </string-array>

    <string-array name="SylhetDistrict">
        <item>Sylhet Polytechnic Institute</item>
        <item>Hobigonj Polytechnic Institute</item>
        <item>Maulvi Bazar Polytechnic Institute</item>
    </string-array>
    <string-array name="SylhetDistrict_subTitle">
        <item>Sylhet Polytechnic Institute</item>
        <item>Hobigonj Polytechnic Institute</item>
        <item>Maulvi Bazar Polytechnic Institute</item>
    </string-array>


    <string-array name="DepertmentShortName">
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
    </string-array>

    <string-array name="DepertmentFullName">
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
        <item>Computer</item>
    </string-array>

    <string name="title_activity_view_pager">ViewPager</string>

    <string name="button1">BTEB Result</string>
    <string name="button2">Diploma Totla CGPA</string>

    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>

    <style name="style_2">
        <item name="android:layout_width">wrap_content</item>
        <item name="android:layout_height">wrap_content</item>
        <item name="android:textColor">#686767</item>
        <item name="android:textSize">12sp</item>
        <item name="android:textAppearance">@android:style/TextAppearance.Small</item>
    </style>

    <string name="Dhaka">ঢাকা বিভাগ</string>
    <string name="Chittagong">চট্টগ্রাম বিভাগ</string>
    <string name="Barisal">বরিশাল বিভাগ</string>
    <string name="Khulna">খুলনা বিভাগ</string>
    <string name="Mymensingh">ময়মনসিংহ বিভাগ</string>
    <string name="Rajshahi">রাজশাহী বিভাগ</string>
    <string name="Sylhet">সিলেট বিভাগ</string>
    <string name="Rangpur">রংপুর বিভাগ</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
